syntax = "proto3";

enum IdRegistryEventType {
    REGISTER = 0;
    TRANSFER = 1;
}

message IdRegistryEvent {
    uint32 block_number = 1;
    bytes block_hash = 2;
    bytes transaction_hash = 3;
    uint32 log_index = 4;
    uint64 fid = 5;
    bytes to = 6;
    IdRegistryEventType event_type = 7;
    bytes from = 8;
}
